MFH: Fixed bug #27384 (unpack() misbehaves with 1 char string). (GeorgeS)